--- a/mobile/issue-tracker/issue-tracker/PresentationLayer/Issue/IssueListViewController.storyboard
+++ b/mobile/issue-tracker/issue-tracker/PresentationLayer/Issue/IssueListViewController.storyboard
@@ -7,6 +7,7 @@
         <capability name="Named colors" minToolsVersion="9.0"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="System colors in document resources" minToolsVersion="11.0"/>
+        <capability name="collection view cell content view" minToolsVersion="11.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
@@ -18,10 +19,30 @@
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="TAW-Xg-5HK">
+                            <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" dataMode="prototypes" translatesAutoresizingMaskIntoConstraints="NO" id="gEV-iP-IC3">
                                 <rect key="frame" x="0.0" y="44" width="414" height="818"/>
                                 <color key="backgroundColor" systemColor="systemBackgroundColor"/>
-                            </tableView>
+                                <collectionViewFlowLayout key="collectionViewLayout" automaticEstimatedItemSize="YES" minimumLineSpacing="10" minimumInteritemSpacing="10" id="QJ0-wH-9ox">
+                                    <size key="itemSize" width="128" height="128"/>
+                                    <size key="headerReferenceSize" width="0.0" height="0.0"/>
+                                    <size key="footerReferenceSize" width="0.0" height="0.0"/>
+                                    <inset key="sectionInset" minX="0.0" minY="0.0" maxX="0.0" maxY="0.0"/>
+                                </collectionViewFlowLayout>
+                                <cells>
+                                    <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" id="1fv-sb-LxC">
+                                        <rect key="frame" x="0.0" y="0.0" width="128" height="128"/>
+                                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                        <collectionViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO" id="gV3-Nc-VeJ">
+                                            <rect key="frame" x="0.0" y="0.0" width="128" height="128"/>
+                                            <autoresizingMask key="autoresizingMask"/>
+                                        </collectionViewCellContentView>
+                                    </collectionViewCell>
+                                </cells>
+                                <connections>
+                                    <outlet property="dataSource" destination="L8F-f7-Ygb" id="DXB-DW-n23"/>
+                                    <outlet property="delegate" destination="L8F-f7-Ygb" id="gg0-w7-wkl"/>
+                                </connections>
+                            </collectionView>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="l9s-Cm-M5O">
                                 <rect key="frame" x="334" y="782" width="64" height="64"/>
                                 <color key="backgroundColor" name="AccentColor"/>
@@ -44,12 +65,12 @@
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                         <accessibility key="accessibilityConfiguration" identifier="MainView"/>
                         <constraints>
-                            <constraint firstItem="TAW-Xg-5HK" firstAttribute="leading" secondItem="geR-eb-I5d" secondAttribute="leading" id="93U-tv-wic"/>
-                            <constraint firstItem="geR-eb-I5d" firstAttribute="trailing" secondItem="TAW-Xg-5HK" secondAttribute="trailing" id="Mfo-U8-d7K"/>
+                            <constraint firstItem="gEV-iP-IC3" firstAttribute="top" secondItem="geR-eb-I5d" secondAttribute="top" id="4KX-6f-QcR"/>
+                            <constraint firstItem="gEV-iP-IC3" firstAttribute="leading" secondItem="geR-eb-I5d" secondAttribute="leading" id="JTz-qi-SwU"/>
                             <constraint firstItem="geR-eb-I5d" firstAttribute="bottom" secondItem="l9s-Cm-M5O" secondAttribute="bottom" constant="16" id="Swn-B0-LeU"/>
-                            <constraint firstItem="geR-eb-I5d" firstAttribute="bottom" secondItem="TAW-Xg-5HK" secondAttribute="bottom" id="aWS-S9-cuu"/>
-                            <constraint firstItem="TAW-Xg-5HK" firstAttribute="top" secondItem="geR-eb-I5d" secondAttribute="top" id="oVv-rA-0TC"/>
+                            <constraint firstItem="geR-eb-I5d" firstAttribute="trailing" secondItem="gEV-iP-IC3" secondAttribute="trailing" id="ps5-8P-aCZ"/>
                             <constraint firstItem="geR-eb-I5d" firstAttribute="trailing" secondItem="l9s-Cm-M5O" secondAttribute="trailing" constant="16" id="qme-qf-B1e"/>
+                            <constraint firstItem="geR-eb-I5d" firstAttribute="bottom" secondItem="gEV-iP-IC3" secondAttribute="bottom" id="vMK-M8-Fso"/>
                         </constraints>
                     </view>
                     <navigationItem key="navigationItem" title="이슈" id="UKV-gM-DWb">
@@ -73,7 +94,7 @@
                         </barButtonItem>
                     </navigationItem>
                     <connections>
-                        <outlet property="issueTableView" destination="TAW-Xg-5HK" id="ll7-1J-aFm"/>
+                        <outlet property="issueCollectionView" destination="gEV-iP-IC3" id="wUz-bg-AtV"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="rV7-uk-7eF" sceneMemberID="firstResponder"/>
