--- a/mobile/issue-tracker/issue-tracker/PresentationLayer/Issue/IssueListViewController.storyboard
+++ b/mobile/issue-tracker/issue-tracker/PresentationLayer/Issue/IssueListViewController.storyboard
@@ -36,13 +36,13 @@
                                 </userDefinedRuntimeAttributes>
                             </button>
                             <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" dataMode="prototypes" translatesAutoresizingMaskIntoConstraints="NO" id="gEV-iP-IC3">
-                                <rect key="frame" x="0.0" y="44" width="414" height="818"/>
+                                <rect key="frame" x="0.0" y="54" width="414" height="808"/>
                                 <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                                 <collectionViewFlowLayout key="collectionViewLayout" minimumLineSpacing="20" minimumInteritemSpacing="10" id="QJ0-wH-9ox">
                                     <size key="itemSize" width="128" height="128"/>
                                     <size key="headerReferenceSize" width="0.0" height="0.0"/>
                                     <size key="footerReferenceSize" width="0.0" height="0.0"/>
-                                    <inset key="sectionInset" minX="0.0" minY="0.0" maxX="0.0" maxY="0.0"/>
+                                    <inset key="sectionInset" minX="0.0" minY="5" maxX="0.0" maxY="0.0"/>
                                 </collectionViewFlowLayout>
                                 <cells/>
                                 <connections>
@@ -55,7 +55,7 @@
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                         <accessibility key="accessibilityConfiguration" identifier="MainView"/>
                         <constraints>
-                            <constraint firstItem="gEV-iP-IC3" firstAttribute="top" secondItem="geR-eb-I5d" secondAttribute="top" id="4KX-6f-QcR"/>
+                            <constraint firstItem="gEV-iP-IC3" firstAttribute="top" secondItem="geR-eb-I5d" secondAttribute="top" constant="10" id="4KX-6f-QcR"/>
                             <constraint firstItem="gEV-iP-IC3" firstAttribute="leading" secondItem="geR-eb-I5d" secondAttribute="leading" id="JTz-qi-SwU"/>
                             <constraint firstItem="geR-eb-I5d" firstAttribute="bottom" secondItem="l9s-Cm-M5O" secondAttribute="bottom" constant="16" id="Swn-B0-LeU"/>
                             <constraint firstItem="geR-eb-I5d" firstAttribute="trailing" secondItem="gEV-iP-IC3" secondAttribute="trailing" id="ps5-8P-aCZ"/>
